Fix the broken layout for mobile screen

--- a/style.scss
+++ b/style.scss
@@ -264,7 +264,7 @@ footer {
     width: 100%;
   }
 
-  .word-titles {
+  .word-titles-box {
     font-size: 1.8rem;
     line-height: 100%;
     display: none;
